# libuninameslist

./: .appveyor.yml  .travis.yml  AUTHORS  ChangeLog  LICENSE  Makefile.am  Makefile.in  README  README.md  aclocal.m4  build.sh  buildnameslist.c  configure  configure.ac  configure.in  libuninameslist-fr.3  libuninameslist.3  libuninameslist.pc.in  libuninameslist.py  nameslist-dll.h  nameslist-fr.c  nameslist.c  nameslist.h  regen  uninameslist-fr.h  uninameslist.h  uninameslist.py
.github/workflows/: main.yml
py/: Makefile.am  setup.py  uninameslist.py
tests/: Makefile.am  call-test.c
